# neris-api-client

./: LICENSE  Pipfile  README.md  gen  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
examples/: .env.example
examples/api/: .env.client_credentials.example  .env.example  .env.password.example  create-api-integration.py  enroll-api-integration.py  list-api-integrations.py  list-incidents.py  main.py
examples/client_credentials/: .env.example
examples/password/: .env.example  authenticate.py
src/neris_api_client/: __init__.py  client.py  config.py  models.py
