[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neris_api_client"
version = "1.3.0"
authors = [
  { name="Ben Coleman", email="ben.coleman@ul.org" },
  { name="Tommy Messbauer", email="thomas.messbauer@ul.org" },
  { name="Joseph Pagani", email="joseph.pagani@ul.org"}
]
description = "NERIS API Client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pydantic[email]>=2",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/ulfsri/neris-api-client"
Issues = "https://neris.atlassian.net/servicedesk/customer/portal/3/group/3/create/10027"
